--- a/app/templates/zhihu.html
+++ b/app/templates/zhihu.html
@@ -1,10 +1,10 @@
 {%  extends "base.html" %}
 
-{% block title %}Amber's Blog - 404{% endblock %}
+{% block title %}Amber's Blog - 知乎爬虫{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>新浪微博爬虫</h1>
+    <h1>知乎爬虫</h1>
 </div>
     <p>找不到你要的资源，可能还没有实现哦。</p>
 {% endblock %}
