添加了按学期查询课表的功能

--- a/app/templates/crawlers.html
+++ b/app/templates/crawlers.html
@@ -9,7 +9,7 @@
 <div>
     <tr>
         <td><a class="btn btn-primary" href="{{ url_for('crawlers.xk_crawler', _external=True) }}" role="button">xk.suda 成绩查询</a></td>
-        <td><a class="btn btn-primary" href="{{ url_for('crawlers.weibo_crawler', _external=True) }}" role="button">新浪微博爬虫（TODO）</a></td>
+        <td><a class="btn btn-primary" href="{{ url_for('crawlers.zhihu_crawler', _external=True) }}" role="button">新浪微博爬虫（TODO）</a></td>
     </tr>
 </div>
 {% endblock %}
