--- a/app/templates/xk.html
+++ b/app/templates/xk.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
     <div class="page-header">
-        <h2> xk.suda 成绩查询 </h2>
+        <h2> xk.suda 查询 </h2>
     </div>
     <div class="row">
         <div class="col-xs-6 col-md-4 col-lg-3">
